samples/_failures_safe/1761533767_e92d4d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_36fedfa8.c: In function ‘tokenize’:
./samples/SAFE/__tmp_36fedfa8.c:165: error: expected ‘{’ at end of input
